# Automatyczne-aplikowanie

./: .env.example  .gitattributes  .gitignore  README.md  Serp_limit.py  config.py  cv_engine.py  cv_finalizer.py  mailer.py  main.py  pipeline_validate.py  pyproject.toml  pytest.ini  rate_limit.py  reporter.py  requirements-ocr.txt  requirements.txt  scheduler.py  serp_client.py  webdriver_apply.py
.github/workflows/: ci.yml  main.yml  scheduled-pipeline.yml  weekly-gdrive-publish.yml
scripts/: gh_pipeline.py  prepare_weekly_bundle.py  send_report_email.py  verify_env.py
tests/: conftest.py  test_ci_smoke.py  test_config.py  test_cv_engine.py  test_cv_engine_drive_scenarios.py  test_cv_finalizer.py  test_env_example_contract.py  test_mailer.py  test_mailer_openai_scenarios.py  test_main.py  test_pipeline_validate.py  test_rate_limit.py  test_reporter.py  test_scheduler.py  test_serp_client.py  test_serp_limit.py  test_webdriver_apply.py
tests/e2e/: __init__.py  conftest.py  test_e2e_config.py  test_e2e_cv_engine.py  test_e2e_cv_finalizer.py  test_e2e_mailer.py  test_e2e_pipeline.py  test_e2e_rate_limit.py  test_e2e_reporter.py  test_e2e_scheduler.py  test_e2e_serp_client.py  test_e2e_serp_limit.py  test_e2e_webdriver_apply.py
tests/integration/: __init__.py  conftest.py  helpers.py  test_integration_config.py  test_integration_cv_engine.py  test_integration_cv_finalizer.py  test_integration_mailer.py  test_integration_main.py  test_integration_rate_limit.py  test_integration_reporter.py  test_integration_scheduler.py  test_integration_serp_client.py  (+3 more)
(+12 files in other folders)
