[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "automatyczne-aplikowanie"
version = "0.1.0"
description = "Automatyczne aplikowanie — pipeline ofert (SerpApi), scrapingu e-maili, OpenAI i SMTP"
readme = "README.md"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
markers = [
    "integration: testy integracyjne",
    "slow: bardzo wolne",
    "regression: testy regresji",
    "e2e: testy end-to-end",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["."]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
