[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "automatyczne-aplikowanie"
version = "0.1.0"
description = "Automatyczne aplikowanie — pipeline ofert (SerpApi), scrapingu e-maili, OpenAI i SMTP"
readme = "README.md"
requires-python = ">=3.10"

# Konfiguracja pytest wyłącznie w pytest.ini (unikamy ostrzeżenia o dwóch źródłach).

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["."]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
